# Vulkan

./: CMakeLists.txt  CMakePresets.json  README.md
starter-template/: CMakeLists.txt  config.cmake  package.cmake
starter-template/source/: main.cpp
starter-template/source/logger/: logger.hpp
tools/: clean.ps1  x64compile.ps1  x64release.ps1
